<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/ll_settings"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:layout_weight="9"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:text="@string/setting_info_local_ip"
            android:paddingLeft="16dp"
            android:layout_width="0dp"
            android:layout_height="48dp" />

        <TextView
            android:id="@+id/tv_local_ip"
            android:layout_weight="6"
            android:gravity="center_vertical|center"
            android:textSize="16sp"
            android:text="@string/setting_info_default_ip"
            android:layout_width="0dp"
            android:layout_height="48dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="16dp"
        android:background="#e6e6e6" />

    <!--737373-->
    <!--FAFAFA-->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:text="@string/setting_info_conn_status"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_connect_status"
            android:layout_weight="6"
            android:gravity="center_vertical|center"
            android:textSize="16sp"
            android:text="@string/setting_info_default_conn_status"
            android:layout_width="0dp"
            android:layout_height="48dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="16dp"
        android:background="#e6e6e6" />

    <LinearLayout
        android:id="@+id/ll_connection_settings_display"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:layout_weight="9"
            android:textColor="#3993CB"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:text="@string/setting_info_conn_setting"
            android:paddingLeft="16dp"
            android:layout_width="0dp"
            android:layout_height="48dp" />

        <TextView
            android:id="@+id/tv_ip_port"
            android:layout_weight="9"
            android:textColor="#3993CB"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/setting_info_conn_default_setting"
            android:paddingLeft="16dp"
            android:layout_width="0dp"
            android:layout_height="48dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="16dp"
        android:background="#e6e6e6" />

    <TextView
        android:gravity="center_vertical"
        android:textSize="16sp"
        android:text="@string/setting_info_how_to_use"
        android:paddingLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="16dp"
        android:background="#e6e6e6" />

    <TextView
        android:gravity="center_vertical"
        android:textSize="16sp"
        android:text="@string/setting_info_about"
        android:paddingLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="16dp"
        android:background="#e6e6e6" />


</LinearLayout>